# ae1205-discord

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  edubot.py  setup.cfg  setup.py
.github/workflows/: python_cicd.yml
cogs/: __init__.py  poll.py  queue.py
cogs/quizzes/: test_quiz.json
src/: main.py
src/edubot/: __init__.py  bot.py  run.py
src/edubot/cogs/: __init__.py  errorhandler.py  poll.py  queue.py
src/edubot/static/quizzes/: quiz_template.json
tests/: conftest.py  helpers.py
tests/test_edubot/: test_bot.py
